--- a/front-end/src/styles/ScrollVideoSection.css
+++ b/front-end/src/styles/ScrollVideoSection.css
@@ -50,15 +50,7 @@
     width: 100%;
     height: 100%;
     object-fit: cover;
-    opacity: 0;
-    transition: opacity 1.5s ease;
-    /* Slower fade for elegance */
     filter: brightness(0.95);
-    /* Slightly brighter than before */
-}
-
-.background-video.loaded {
-    opacity: 1;
 }
 
 /* Video Overlay */
